edit tag name and class name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img class="profile" src="./img/logo.svg" alt="logo">
             </h1>
             <nav>
-                <ul class="ul0">
+                <ul class="gnav">
                     <li>About</li>
                     <li>Bicycle</li>
                 </ul>
@@ -28,43 +28,42 @@
         <img class="mainvisual" src="./img/mainvisual.jpg" alt="mainvisual">
     </div>
     <div class="container">
-        <div class="div1">
+        <section class="section1">
             <h2><span>About</span></h2>
-            <ul class="ul1">
-                <li><img class="about" src="./img/about.jpg" alt="about"></li>
+            <ul class="about">
+                <li><img class="about-img" src="./img/about.jpg" alt="about"></li>
                 <li class="ul1_li">
                     <p>KAKERU MIYAUCHI</p>
                     <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                     </p>
                 </li>
             </ul>
-        </div>
-        <div class="div2">
+        </section>
+        <section class="section2">
             <h2><span>Bicycle</span></h2>
-            <ul class="ul2">
+            <ul class="bicycle">
                 <li>
-                    <img class="bicycle" src="./img/bicycle1.jpg" alt="about">
+                    <img class="bicycle-img" src="./img/bicycle1.jpg" alt="about">
                     <h3>タイトルタイトル</h3>
                     <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                 </li>
                 <li>
-                    <img class="bicycle" src="./img/bicycle2.jpg" alt="about">
+                    <img class="bicycle-img" src="./img/bicycle2.jpg" alt="about">
                     <h3>タイトルタイトル</h3>
                     <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                 </li>
                 <li>
-                    <img class="bicycle" src="./img/bicycle3.jpg" alt="about">
+                    <img class="bicycle-img" src="./img/bicycle3.jpg" alt="about">
                     <h3>タイトルタイトル</h3>
                     <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                 </li>
 
             </ul>
-        </div>
+        </section>
     </div>
     </div>
     <footer class="footer">
         <p><small>&copy; 2020 profile</small></p>
     </footer>
 </body>
-
 </html>
