--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="noindex, nofollow">
     <link href="./css/reset.css" rel="stylesheet" media="all">
     <link href="./css/style.css" rel="stylesheet" media="all">
     <title>趣味の自転車</title>
@@ -60,7 +60,6 @@
 
             </ul>
         </section>
-    </div>
     </div>
     <footer class="footer">
         <p><small>&copy; 2020 profile</small></p>
